--- a/web.html
+++ b/web.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <div class="main">
@@ -77,6 +77,6 @@
       </div>
     </div>
 
-    <script src="scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
