--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="main">
       <div class="head">
-        <h1 class="Heading">CRuD</h1>
+        <h1 class="heading">CRuD</h1>
         <p>PRODUCT MANAGEMENT SYSTEM</p>
         <p id="error"></p>
       </div>
